# CMake-Tutorial

./: .gitmodules
01_basic_development/: CMakeLists.txt  add.cpp  add.h  calc_status.h  main.cpp
02_modular_development/: CMakeLists.txt  main.cpp
02_modular_development/add/: CMakeLists.txt
02_modular_development/maths/: CMakeLists.txt  maths.cpp
02_modular_development/status/: CMakeLists.txt
02_modular_development/subtract/: CMakeLists.txt
03_modular_development_custom_compile/: CMakeLists.txt
03_modular_development_custom_compile/add/: CMakeLists.txt
03_modular_development_custom_compile/cmake/: project_configuration.cmake
03_modular_development_custom_compile/maths/: CMakeLists.txt
03_modular_development_custom_compile/subtract/: CMakeLists.txt
04_development_and_gtest_ext_dep/: CMakeLists.txt
04_development_and_gtest_ext_dep/add/: CMakeLists.txt  add.cpp
04_development_and_gtest_ext_dep/cmake/: project_configuration.cmake
04_development_and_gtest_ext_dep/maths/: CMakeLists.txt
04_development_and_gtest_ext_dep/status/: CMakeLists.txt
04_development_and_gtest_ext_dep/subtract/: CMakeLists.txt  subtract.cpp
04_development_and_gtest_ext_dep/tests/: CMakeLists.txt  basic_math.cpp
05_development_and_deploy_static/custom_library/: CMakeLists.txt
05_development_and_deploy_static/custom_library/add/: CMakeLists.txt
05_development_and_deploy_static/custom_library/maths/: CMakeLists.txt
05_development_and_deploy_static/custom_library/status/: CMakeLists.txt
05_development_and_deploy_static/custom_library/subtract/: CMakeLists.txt
05_development_and_deploy_static/custom_library/subtract/subtract_header/: subtract.h
05_development_and_deploy_static/custom_library/tests/: CMakeLists.txt  basic_math.cpp
05_development_and_deploy_static/test_project/: CMakeLists.txt  main.cpp
06_development_and_deploy_shared/custom_library/: CMakeLists.txt
06_development_and_deploy_shared/custom_library/add/: CMakeLists.txt
06_development_and_deploy_shared/custom_library/cmake/: MathsConfig.cmake.in  project_configuration.cmake
06_development_and_deploy_shared/custom_library/maths/: CMakeLists.txt
06_development_and_deploy_shared/custom_library/status/: CMakeLists.txt
06_development_and_deploy_shared/custom_library/subtract/: CMakeLists.txt
06_development_and_deploy_shared/custom_library/tests/: CMakeLists.txt
06_development_and_deploy_shared/test_project/: CMakeLists.txt  main.cpp
06_development_and_deploy_shared/test_project/cmake/Darwin/: bundle.cmake.in
06_development_and_deploy_shared/test_project/cmake/Windows/: bundle.cmake.in
07a_development_and_deploy_static_third_dependency/custom_library/: CMakeLists.txt
07a_development_and_deploy_static_third_dependency/custom_library/cmake/: MathsConfig.cmake.in  project_configuration.cmake
07a_development_and_deploy_static_third_dependency/custom_library/maths/: maths.cpp
07a_development_and_deploy_static_third_dependency/custom_library/status/: CMakeLists.txt
07a_development_and_deploy_static_third_dependency/custom_library/tests/: CMakeLists.txt  basic_math.cpp
07a_development_and_deploy_static_third_dependency/test_project/: CMakeLists.txt
07b_development_and_deploy_shared_third_dependency/custom_library/: CMakeLists.txt
07b_development_and_deploy_shared_third_dependency/custom_library/add/: CMakeLists.txt
07b_development_and_deploy_shared_third_dependency/custom_library/cmake/: Maths.pc.in  project_configuration.cmake
07b_development_and_deploy_shared_third_dependency/custom_library/maths/: CMakeLists.txt
07b_development_and_deploy_shared_third_dependency/custom_library/status/: CMakeLists.txt
07b_development_and_deploy_shared_third_dependency/custom_library/subtract/: CMakeLists.txt
07b_development_and_deploy_shared_third_dependency/custom_library/tests/: basic_math.cpp
07b_development_and_deploy_shared_third_dependency/test_project/: CMakeLists.txt  install-deps-root-dir  main.cpp
07b_development_and_deploy_shared_third_dependency/test_project/cmake/Darwin/: bundle.cmake.in
08a_basic_development_and_depoly_vcpkg/: README.md
08a_basic_development_and_depoly_vcpkg/test_project/: CMakeLists.txt  main.cpp  vcpkg.comment
08a_basic_development_and_depoly_vcpkg/test_project/tests/: CMakeLists.txt  test_1.cpp
08b_basic_development_and_depoly_conan/: README.md
08b_basic_development_and_depoly_conan/test_project/: CMakeLists.txt  conanfile.txt  vcpkg.json
08b_basic_development_and_depoly_conan/test_project/cmake/: bundle.cmake.in
08b_basic_development_and_depoly_conan/test_project/cmake/Linux/: bundle.cmake.in
08b_basic_development_and_depoly_conan/test_project/cmake/Windows/: bundle.cmake.in
08b_basic_development_and_depoly_conan/test_project/profiles/: clang_x64  clang_x64-dynamic  clang_x64-static  gcc_x64  gcc_x64-dynamic  gcc_x64-static  mingw64  mingw64-dynamic  mingw64-static
09a_deploy_remotely_third_dependency_fetchcontent/test_project/: CMakeLists.txt  install-deps-root-dir
09a_deploy_remotely_third_dependency_fetchcontent/test_project/cmake/: bundle.cmake.in
09a_deploy_remotely_third_dependency_fetchcontent/test_project/cmake/Windows/: bundle.cmake.in
09b_deploy_remotely_third_dependency_vcpkg/: README.md
09b_deploy_remotely_third_dependency_vcpkg/test_project/: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
09b_deploy_remotely_third_dependency_vcpkg/test_project/cmake/Linux/: bundle.cmake.in
10_locally_fix_remotely_third_dependency_vcpkg/: README.md
10_locally_fix_remotely_third_dependency_vcpkg/test_project/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
10_locally_fix_remotely_third_dependency_vcpkg/test_project/cmake/Windows/: bundle.cmake.in
materials/: overall_workflow.graphml  vcpkg_workflow.graphml
